# ruyi-device-provision-gui

./: .gitignore  README.md  extract_device.py  fix_smoke.py  fix_tests.py  integrate_state_machine.py  main_window_methods.txt  pyproject.toml  refactor_main.py  test_out.txt  workers_methods.txt
.github/workflows/: ci.yml  debian-compat.yml  tag-build.yml
docs/: development-guide.md
oh_my_ruyi/: __init__.py  __main__.py  about_tab.py  app.py  download_child.py  host_storage.py  i18n.py  main_window.py  qt_logger.py  repo_manager.py  repo_manager_tab.py  repo_news_child.py  repo_update_child.py  rich_output.py  ruyi_facade.py  state.py  state_machine.py  styles.py  version_manager.py  view_models.py  worker_manager.py  workers.py
oh_my_ruyi/locales/: zh_CN.json
oh_my_ruyi/views/: __init__.py  version_dialogs.py
ruyi_device_provision_gui/: __init__.py  __main__.py  app.py  download_child.py  host_storage.py  main_window.py  qt_logger.py  ruyi_facade.py  state.py  workers.py
tests/: __init__.py  test_about_tab.py  test_host_storage.py  test_i18n.py  test_main_window_interactions.py  test_packaging.py  test_repo_manager_tab.py  test_ruyi_facade_repo.py  test_smoke.py  test_version_manager.py
