[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-my-ruyi"
version = "0.1.4"
description = "PySide6 management frontend for the RuyiSDK package manager"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "weilinfox" },
]
keywords = ["ruyi", "ruyisdk", "package-manager", "device", "provision", "gui", "pyside6"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "PySide6>=6.6",
  "rich>=13.3.1",
  "ruyi>=0.52.0a20260714,<0.53",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-qt>=4.4",
  "ruff>=0.12",
]

[project.scripts]
oh-my-ruyi = "oh_my_ruyi.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["oh_my_ruyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
